Bug 157453 - ListBox in Table Control does not follow the property "line count"
Summary: ListBox in Table Control does not follow the property "line count"
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.8.0 target:24.2.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Form-Controls
  Show dependency treegraph
 
Reported: 2023-09-26 10:25 UTC by TISSENDIER Pierre
Modified: 2024-06-22 22:29 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Base with Form showing invalide line count in listbox in table control (12.84 KB, application/vnd.oasis.opendocument.database)
2023-09-26 10:33 UTC, TISSENDIER Pierre
Details

Note You need to log in before you can comment on or make changes to this bug.
Description TISSENDIER Pierre 2023-09-26 10:25:48 UTC
Description:
ListBox in Table Control do not follows the property "line count"

See also this bug : 98382   for property Alignment

Steps to Reproduce:
1.In writer, or Base Open a Form in conception mode
2.Create a Table Control
3.Insert columns
4.set a column as ListBox based as you want (more of 5 lines i.e)
5.set the line count to 3 
6.open the form in production
7.click in the column with the listbox 

Actual Results:
line count 3 is not followed 

Expected Results:
line count 3 must be respected


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 7.6.1.2 (X86_64) / LibreOffice Community
Build ID: f5defcebd022c5bc36bbb79be232cb6926d8f674
CPU threads: 4; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Calc: threaded
Comment 1 TISSENDIER Pierre 2023-09-26 10:33:09 UTC
Created attachment 189829 [details]
Base with Form showing invalide line count in listbox in table control

I put 2 listbox based on same sql query
One in the form > follows line count (and alignment)
One in a Table control (column "article") > don't follows line count (and alignment)
Comment 2 TISSENDIER Pierre 2023-09-26 14:21:25 UTC
one friend says 

No reproduice in AOo 4.1.14 Win10
Comment 3 TISSENDIER Pierre 2023-09-26 14:24:36 UTC Comment hidden (obsolete)
Comment 4 Buovjaga 2023-10-10 10:58:54 UTC
Can you explain what is the expected result of "line count"? You say

7.click in the column with the listbox
line count 3 is not followed

What does this mean? That the dropdown should only show 3 items?
Comment 5 TISSENDIER Pierre 2023-10-10 11:21:16 UTC
Yes !?
The dropdown should show 3 items  and a vertical scrollbar to show and select other item.
Comment 6 stragu 2023-10-10 11:22:07 UTC
Thank you Pierre.

I reproduce the issue in a recent trunk build:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9a02f4ed071f15908624fb1cafcf6dbb72b00a1b
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Steps:
1. Open attachment 189829 [details]
2. Forms > right-click on Formulaire1 > Edit
3. Right-click on column "Article" in the Table control > Control > General > Line count: value is set to 5 already.
4. Close dialog, turn Design Mode off
5. Expand a dropdown in the Article column

Result: 11 rows shown instead of 5.

This is a regression in 7.0. Both gtk3 and gen VCL plugins are affected.

Bibisected with linux-64-7.0 repository to first bad commit c36e473dd4356f5bf5e8bcdf4b43d32c6f02741b which points to core commit:

commit 8477bbf8d6867e656b8132f0ddd682d08590a547
author	Caolán McNamara 	Wed May 13 16:57:07 2020 +0100
committer	Caolán McNamara 	Thu May 21 09:53:46 2020 +0200
weld ListBoxControl
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/94154

Caolán, can you please have a look?
Comment 7 TISSENDIER Pierre 2024-01-22 18:38:10 UTC
Confirmed in 
Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: e19e193f88cd6c0525a17fb7a176ed8e6a3e2aa1
CPU threads: 4; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Calc: threaded
Comment 8 Julien Nabet 2024-05-07 15:39:53 UTC
On pc Debian x86-64 with master sources updated today, it always displays 3 articles, whatever the value I put in General > Line count

The property seems to be FM_PROP_LINECOUNT and when git grepping this I got:
svx/source/fmcomp/gridcell.cxx:2464:    doPropertyListening( FM_PROP_LINECOUNT );
svx/source/fmcomp/gridcell.cxx:2498:    // we no longer pay attention to FM_PROP_LINECOUNT
svx/source/fmcomp/gridcell.cxx:2577:    doPropertyListening( FM_PROP_LINECOUNT );
svx/source/fmcomp/gridcell.cxx:2634:    // ignore FM_PROP_LINECOUNT
svx/source/form/formcontrolfactory.cxx:397:                    _rxControlModel->setPropertyValue( FM_PROP_LINECOUNT, Any( sal_Int16( 20 ) ) );
svx/source/inc/fmprop.hxx:91:inline constexpr OUString FM_PROP_LINECOUNT = u"LineCount"_ustr;
Comment 9 Caolán McNamara 2024-05-18 20:18:54 UTC
I'm not sure why we have a feature like this, it seems an odd thing to support.
Comment 10 Commit Notification 2024-05-19 14:44:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c5fb86f91c3d799cb3817706a5c9a344939a4f1e

Resolves: tdf#157453 support FM_PROP_LINECOUNT for combobox dropdow rows

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Caolán McNamara 2024-05-19 14:44:57 UTC
done in trunk, backport to 24.2 in gerrit
Comment 12 Commit Notification 2024-05-19 18:34:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/07e6ed881032d1df3ec96c93f5e6c502e021eeb6

Resolves: tdf#157453 support FM_PROP_LINECOUNT for combobox dropdow rows

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 TISSENDIER Pierre 2024-05-20 06:51:14 UTC
THANKS
I will test in a few days
Have you been able to also correct the bad alignment (center/right)?Bug #98382
Comment 14 TISSENDIER Pierre 2024-06-22 13:41:47 UTC
Version: 24.2.4.2 (X86_64) / LibreOffice Community
Build ID: 51a6219feb6075d9a4c46691dcfe0cd9c4fff3c2
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Calc: threaded

It's good.That works

THANKS